[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/imagwzii_text_medium.tscn" type="PackedScene" id=1]
[ext_resource path="res://menu/player_box.gd" type="Script" id=2]

[node name="PlayerBox" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1040.0
margin_bottom = -610.0
rect_min_size = Vector2( 240, 0 )
custom_constants/separation = 25
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" parent="." instance=ExtResource( 1 )]
margin_right = 240.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "player"
align = 1

[node name="TextBox" type="VBoxContainer" parent="."]
margin_top = 50.0
margin_right = 240.0
margin_bottom = 110.0
custom_constants/separation = 10

[node name="Text1" parent="TextBox" instance=ExtResource( 1 )]
margin_right = 240.0
margin_bottom = 25.0
text = "j0in"
align = 1

[node name="Text2" parent="TextBox" instance=ExtResource( 1 )]
margin_top = 35.0
margin_right = 240.0
margin_bottom = 60.0
text = "game!1"
align = 1
